Revert "📱 fixed the burger menu on mobile 📱"
This reverts commit 16923f19b54de400d70229e0b58d73d789e10543.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,13 +79,6 @@
 
 /* mobile Burger */
 
-.burger-container {
-    position: relative;
-    height: 28px;
-    width: 36px;
-    cursor: pointer;
-}
-
 .line-top,
 .line-middle,
 .line-bottom {
